--- a/InternasAnidadasCalculadora/app/src/main/res/layout/activity_main.xml
+++ b/InternasAnidadasCalculadora/app/src/main/res/layout/activity_main.xml
@@ -4,37 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <RadioButton
-        android:id="@+id/rbDiv"
-        android:layout_width="90dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="100dp"
-        android:text="Division"
-        android:textColor="#2196F3"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rbResta" />
-
-    <RadioButton
-        android:id="@+id/rbMulti"
-        android:layout_width="89dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="8dp"
-        android:text="Multi"
-        android:textColor="#FF0000"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rbSuma" />
+    tools:context=".MainActivity"
+    tools:layout_editor_absoluteX="-1dp"
+    tools:layout_editor_absoluteY="16dp">
 
     <EditText
         android:id="@+id/etnValor1"
         android:layout_width="244dp"
         android:layout_height="51dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Primer valor"
         android:inputType="number"
@@ -47,21 +25,21 @@
     <EditText
         android:id="@+id/etnValor2"
         android:layout_width="246dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="28dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Segundo valor"
         android:inputType="number"
         android:textColor="#009688"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etnValor1" />
 
     <TextView
         android:id="@+id/txtResultado"
-        android:layout_width="198dp"
-        android:layout_height="86dp"
+        android:layout_width="256dp"
+        android:layout_height="84dp"
         android:layout_marginTop="44dp"
         android:text="Resultado: "
         android:textAlignment="center"
@@ -69,28 +47,29 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
-        app:layout_constraintVertical_bias="0.187" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnCalcular"
-        android:layout_width="204dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="120dp"
+        android:layout_width="247dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="#3F51B5"
+        android:onClick="Calcular"
         android:text="Calcular"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etnValor2" />
+        app:layout_constraintTop_toBottomOf="@+id/rbDiv" />
 
     <TextView
         android:id="@+id/txtTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="24dp"
         android:text="Calculadora"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -101,26 +80,55 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioButton
-        android:id="@+id/rbSuma"
-        android:layout_width="90dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="12dp"
-        android:text="Suma"
-        android:textColor="#673AB7"
+        android:id="@+id/rbMulti"
+        android:layout_width="89dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="4dp"
+        android:text="Multi"
+        android:textColor="#FF0000"
         android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/rbSuma"
+        app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etnValor2" />
 
     <RadioButton
         android:id="@+id/rbResta"
         android:layout_width="90dp"
-        android:layout_height="32dp"
-        android:layout_marginEnd="100dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="4dp"
         android:text="Resta"
         android:textColor="#4CAF50"
         android:textSize="12sp"
+        app:layout_constraintEnd_toStartOf="@+id/rbDiv"
+        app:layout_constraintHorizontal_bias="0.146"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rbMulti" />
+
+    <RadioButton
+        android:id="@+id/rbDiv"
+        android:layout_width="90dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="92dp"
+        android:text="Division"
+        android:textColor="#2196F3"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="309dp" />
+        app:layout_constraintTop_toBottomOf="@+id/rbSuma" />
+
+    <RadioButton
+        android:id="@+id/rbSuma"
+        android:layout_width="90dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="92dp"
+        android:text="Suma"
+        android:textColor="#673AB7"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etnValor2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
