--- a/TabToolbarApp/app/src/main/res/layout/activity_main.xml
+++ b/TabToolbarApp/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pvView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-    <GridView
-        android:id="@+id/gvTabla"
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tlTablero"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:horizontalSpacing="4dp"
-        android:verticalSpacing="4dp"
-        android:numColumns="2">
-    </GridView>
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
