--- a/TabToolBarApp/app/src/main/res/layout/fragment_vista_fragmento.xml
+++ b/TabToolBarApp/app/src/main/res/layout/fragment_vista_fragmento.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textStyle="bold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
