--- a/AndroidFirebase/app/src/main/res/values/themes.xml
+++ b/AndroidFirebase/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AndroidFirebase" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AndroidFirebase1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/blue_700</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -12,5 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="SplashTema" parent="Theme.AppCompat">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 </resources>
